Haciendo que se mueva con los graficos

--- a/Ajedrez/Ajedrez.vcxproj
+++ b/Ajedrez/Ajedrez.vcxproj
@@ -19,50 +19,54 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Alfil.cpp" />
-    <ClCompile Include="src\Caballo.cpp" />
-    <ClCompile Include="src\Callbacks.cpp" />
-    <ClCompile Include="src\Camara.cpp" />
-    <ClCompile Include="src\CoordinadorAjedrez.cpp" />
-    <ClCompile Include="src\Dama.cpp" />
-    <ClCompile Include="src\Entity.cpp" />
-    <ClCompile Include="src\Globals.cpp" />
-    <ClCompile Include="src\Hitbox.cpp" />
-    <ClCompile Include="src\IA.cpp" />
-    <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Modelo.cpp" />
-    <ClCompile Include="src\MotorDeJuego.cpp" />
-    <ClCompile Include="src\Mundo.cpp" />
-    <ClCompile Include="src\Peon.cpp" />
-    <ClCompile Include="src\Pieza.cpp" />
-    <ClCompile Include="src\Plane.cpp" />
-    <ClCompile Include="src\Rey.cpp" />
-    <ClCompile Include="src\Tablero.cpp" />
-    <ClCompile Include="src\Torre.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Alfil.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Caballo.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Callbacks.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Camara.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\CoordinadorAjedrez.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Dama.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Entity.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Globals.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Hitbox.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\IA.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\InfoTablas.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\main.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Modelo.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\MotorDeJuego.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Mundo.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Peon.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Pieza.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Plane.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Rey.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Tablero.cpp" />
+    <ClCompile Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Torre.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Alfil.h" />
-    <ClInclude Include="src\Caballo.h" />
-    <ClInclude Include="src\Callbacks.h" />
-    <ClInclude Include="src\Camara.h" />
-    <ClInclude Include="src\CoordinadorAjedrez.h" />
-    <ClInclude Include="src\Dama.h" />
-    <ClInclude Include="src\DatosClavada.h" />
-    <ClInclude Include="src\Entity.h" />
-    <ClInclude Include="src\Globals.h" />
-    <ClInclude Include="src\Hitbox.h" />
-    <ClInclude Include="src\IA.h" />
-    <ClInclude Include="src\Modelo.h" />
-    <ClInclude Include="src\MotorDeJuego.h" />
-    <ClInclude Include="src\Movimiento.h" />
-    <ClInclude Include="src\Mundo.h" />
-    <ClInclude Include="src\Peon.h" />
-    <ClInclude Include="src\Pieza.h" />
-    <ClInclude Include="src\Plane.h" />
-    <ClInclude Include="src\Posicion.h" />
-    <ClInclude Include="src\Rey.h" />
-    <ClInclude Include="src\Tablero.h" />
-    <ClInclude Include="src\Torre.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Alfil.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Caballo.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Callbacks.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Camara.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Casilla.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\CoordinadorAjedrez.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Dama.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\DatosBloqueoJaque.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\DatosClavada.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Entity.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Globals.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Hitbox.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\IA.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\InfoTablas.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Modelo.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\MotorDeJuego.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Movimiento.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Mundo.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Peon.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Pieza.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Plane.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Posicion.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Rey.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Tablero.h" />
+    <ClInclude Include="C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\src\Torre.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
