--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,6 @@ StyleCopReport.xml
 *_h.h
 *.ilk
 *.meta
-*.obj
 *.iobj
 *.pch
 *.pdb
@@ -397,25 +396,13 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
-*.idb
-*.pdb
-*.ilk
-*.db
 
-.Ajedrez/temp/
-Ajedrez/temp/
+temp/
 Ajedrez/temp/Ajedrez.ilk
 *.idb
 *.pdb
 *.ilk
 *.db
-
-.Ajedrez/.vs/Ajedrez/v17/.suo
-.Ajedrez/.vs/Ajedrez/v17/.suo
+Ajedrez/.vs/Ajedrez/v17/.suo
+*.sqlite
 *.db
-*.pdb
-*.ilk
-*.log
-*.tlog
-*.idb
-*.pdb
