--- a/Ajedrez.vcxproj.filters
+++ b/Ajedrez.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClInclude Include="src\Casilla.h">
       <Filter>2_Graficos\0_Glut\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\ListaModelo.h">
+      <Filter>2_Graficos\0_Glut\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Caballo.cpp">
@@ -220,6 +223,9 @@
     </ClCompile>
     <ClCompile Include="src\Sonidos.cpp">
       <Filter>5_Sonido\Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ListaModelo.cpp">
+      <Filter>2_Graficos\0_Glut\Resource FIles</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
