--- a/Ajedrez.vcxproj.filters
+++ b/Ajedrez.vcxproj.filters
@@ -153,6 +153,15 @@
     <ClInclude Include="src\Sonidos.h">
       <Filter>5_Sonido\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Pantalla.h">
+      <Filter>3_Menus_Máquina_Estados\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Punto.h">
+      <Filter>3_Menus_Máquina_Estados\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Caja.h">
+      <Filter>3_Menus_Máquina_Estados\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Caballo.cpp">
@@ -220,6 +229,12 @@
     </ClCompile>
     <ClCompile Include="src\Sonidos.cpp">
       <Filter>5_Sonido\Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Pantalla.cpp">
+      <Filter>3_Menus_Máquina_Estados\Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Caja.cpp">
+      <Filter>3_Menus_Máquina_Estados\Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
