Funciones pantallas y transiciones, pantallas

--- a/Ajedrez.vcxproj.filters
+++ b/Ajedrez.vcxproj.filters
@@ -73,14 +73,14 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="1_Lógica\Piezas\Ficheros">
-      <UniqueIdentifier>{12c2d96b-bb82-4677-a31c-bf2c66072683}</UniqueIdentifier>
+    <Filter Include="6_Ficheros">
+      <UniqueIdentifier>{9f02ad3a-0d33-4972-b2c8-2a6a041db792}</UniqueIdentifier>
     </Filter>
-    <Filter Include="1_Lógica\Piezas\Ficheros\Header Files">
-      <UniqueIdentifier>{746f6a2f-a7c1-4bd4-bac8-f3d7fb468f69}</UniqueIdentifier>
+    <Filter Include="6_Ficheros\Header Files">
+      <UniqueIdentifier>{8e7451da-08f7-4980-b137-a2969e161e20}</UniqueIdentifier>
     </Filter>
-    <Filter Include="1_Lógica\Piezas\Ficheros\Source Files">
-      <UniqueIdentifier>{7ebdd345-3de5-4a34-b9ff-95e58348c30a}</UniqueIdentifier>
+    <Filter Include="6_Ficheros\Source Files">
+      <UniqueIdentifier>{ac32f608-5d48-4cec-acfa-de999c37445f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -180,12 +180,6 @@
     <ClInclude Include="src\Cliente.h">
       <Filter>4_Redes\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\DatosRanking.h">
-      <Filter>1_Lógica\Piezas\Ficheros\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Ranking.h">
-      <Filter>3_Menus_Máquina_Estados\Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Caballo.cpp">
@@ -268,12 +262,6 @@
     </ClCompile>
     <ClCompile Include="src\Cliente.cpp">
       <Filter>4_Redes\Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\DatosRanking.cpp">
-      <Filter>1_Lógica\Piezas\Ficheros\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Ranking.cpp">
-      <Filter>3_Menus_Máquina_Estados\Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
