--- a/Ajedrez.vcxproj
+++ b/Ajedrez.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="src\Dama.h" />
     <ClInclude Include="src\DatosBloqueoJaque.h" />
     <ClInclude Include="src\DatosClavada.h" />
+    <ClInclude Include="src\DatosRanking.h" />
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\Globals.h" />
     <ClInclude Include="src\IA.h" />
@@ -168,6 +169,7 @@
     <ClInclude Include="src\Plane.h" />
     <ClInclude Include="src\Posicion.h" />
     <ClInclude Include="src\Punto.h" />
+    <ClInclude Include="src\Ranking.h" />
     <ClInclude Include="src\Rey.h" />
     <ClInclude Include="src\SalidasConsola.h" />
     <ClInclude Include="src\Servidor.h" />
@@ -186,6 +188,7 @@
     <ClCompile Include="src\Cliente.cpp" />
     <ClCompile Include="src\CoordinadorAjedrez.cpp" />
     <ClCompile Include="src\Dama.cpp" />
+    <ClCompile Include="src\DatosRanking.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\Globals.cpp" />
     <ClCompile Include="src\IA.cpp" />
@@ -198,6 +201,7 @@
     <ClCompile Include="src\Peon.cpp" />
     <ClCompile Include="src\Pieza.cpp" />
     <ClCompile Include="src\Plane.cpp" />
+    <ClCompile Include="src\Ranking.cpp" />
     <ClCompile Include="src\Rey.cpp" />
     <ClCompile Include="src\SalidasConsola.cpp" />
     <ClCompile Include="src\Servidor.cpp" />
